<resources>
    <string name="app_name">SubG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_orders">My Orders</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_account">My Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_home">Home</string>
    <string name="callregister1">Seems like you are new here</string>
    <string name="callregister2">Call now and get your account</string>
    <string name="description_string">Fresh Potatoes are nutrient-dense, non-fattening and have reasonable amount of calories. Include them in your regular meals so that the body receives a good supply of carbohydrates, dietary fibers and essential minerals such as copper, magnesium, and iron. In India, potatoes are probably the second-most consumed vegetables after onions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
