<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_about" />

    </group>

</menu>
